unpackaged/main/default/objects/Judgment_Lien__c/Judgment_Lien__c.object-meta.xml
<CustomObject>
    <label>Judgment Lien</label>
    <nameField>
        <label>Instrument Number</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Judgment Liens</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>