unpackaged/main/default/objects/Judgment_Lien__c/fields/Abstract_Issued__c.field-meta.xml
<CustomField>
    <fullName>Abstract_Issued__c</fullName>
    <label>Abstract Issued</label>
    <type>Date</type>
</CustomField>