unpackaged/main/default/objects/Judgment_Lien__c/fields/Abstract_Recorded__c.field-meta.xml
<CustomField>
    <fullName>Abstract_Recorded__c</fullName>
    <label>Abstract Recorded</label>
    <type>Date</type>
</CustomField>