unpackaged/main/default/objects/Judgment_Lien__c/fields/Abstract_Requested__c.field-meta.xml
<CustomField>
    <fullName>Abstract_Requested__c</fullName>
    <label>Abstract Requested</label>
    <type>Date</type>
</CustomField>