unpackaged/main/default/objects/Judgment_Lien__c/fields/County_Where_Abstract_is_Recorded__c.field-meta.xml
<CustomField>
    <fullName>County_Where_Abstract_is_Recorded__c</fullName>
    <label>County Where Abstract is Recorded</label>
    <length>255</length>
    <type>Text</type>
</CustomField>