unpackaged/main/default/objects/Judgment_Lien__c/fields/Sent_for_Recording__c.field-meta.xml
<CustomField>
    <fullName>Sent_for_Recording__c</fullName>
    <label>Sent for Recording</label>
    <type>Date</type>
</CustomField>