unpackaged/main/default/objects/Judgment_Lien__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Prep</fullName>
            </value>
            <value>
                <fullName>At Court</fullName>
            </value>
            <value>
                <fullName>With Recorder’s Office</fullName>
            </value>
            <value>
                <fullName>Recorded</fullName>
            </value>
            <value>
                <fullName>Open</fullName>
                <isActive>false</isActive>
                <label>Open</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>